# realsense-vision

./: .gitignore  CHANGES_SUMMARY.md  FAULT_TOLERANCE.md  LICENSE  README.md  app.py  async_loop_base.py  camera.py  camera_config.json  compile_wrapper.sh  config.py  config.yaml  convert_model.py  convert_model_rknn.py  install.sh  logging_config.py  main.py  main.py.lprof  network_tables.py  pyproject.toml  pyproject.toml.save  reloader.py  requirements.txt  retry_utils.py  robot.py  supervisor.py  test.py  test3.py  utils.py  wslog.py
RubikPiWrapper/: .gitignore  CMakeLists.txt  build_tflite.py  pyproject.toml  setup.py
RubikPiWrapper/src/: rubik_python_wrapper.cpp
RubikPiWrapper/stubs/: rubik_detector.pyi
app/: config.py  main.py  scheduler.py  wslog.py
app/components/: network_tables.py  retry_utils.py  supervisor.py
app/components/detection/: camera.py  camera_base.py  camera_factory.py  detector.py  detector_base.py  detector_factory.py  pipeline_runner.py  pipelines.py  realsense_camera.py  rubik_detector.py  usb_camera.py
app/components/detection/pipelines/: apriltag_detection_pipeline.py  detection_depth_pipeline.py  empty_pipeline.py  fuel_pipeline.py  pipeline_base.py  regular_pipeline.py
app/core/: app_lifespan.py  initialization.py  initializer.py  logging_config.py  reloader.py  uploader.py
app/server/: routes.py  streams.py
detection/: detector.py  pipeline_runner.py  pipelines.py
models/: detection_model.py  log_model.py  models.py
server/: routes.py  streams.py
static/: main.js  style.css
templates/: index.html  upload_progress.html
utils/: async_loop_base.py  drawing_utils.py  utils.py
