[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubik_detector"
version = "0.1.0"
description = "Python wrapper for RubikDetector TFLite inference"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

[tool.setuptools]
packages = []